--- a/package.json
+++ b/package.json
@@ -1,131 +1,89 @@
 {
   "name": "amazon-chime-sdk-component-library-react",
-  "version": "3.3.0",
+  "version": "1.6.0",
   "description": "Amazon Chime SDK Component Library - React",
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
   "files": [
-    "lib",
-    "CHANGELOG.md",
-    "NOTICE"
+    "lib"
   ],
-  "engines": {
-    "node": "^12 || ^14 || ^15 || ^16",
-    "npm": "^6 || ^7 || ^8"
-  },
   "repository": {
     "type": "git",
     "url": "git://github.com/aws/amazon-chime-sdk-component-library"
   },
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "node scripts/generate-version.js && rollup -c",
-    "lint": "eslint src tst --ext .ts,.tsx,.js --fix",
+    "build": "rollup -c",
     "check": "node scripts/check-codestyle.js",
+    "prerelease": "node scripts/verdaccio.js",
     "release": "node scripts/release.js",
     "prebuild:publish": "npm install && node scripts/prebuild.js --publish",
     "build:publish": "npm run check && npm run build && npm run test ",
     "postbuild:publish": "node scripts/postbuild.js",
     "prebuild:release": "node scripts/prebuild.js",
     "build:release": "npm install && npm run check && npm run build && npm run test ",
-    "postbuild:release": "node scripts/postbuild.js",
-    "start": "start-storybook -p 9009",
-    "test": "jest -c jest.config.js",
-    "deploy-storybook": "storybook-to-ghpages",
-    "build-storybook": "build-storybook",
-    "jest:integration": "jest -c jest-snapshot.config.js --verbose ./tst/snapshots/*",
-    "test:snapshots-path": "jest -c jest-snapshot.config.js --verbose",
-    "test:snapshots": "start-server-and-test start http-get://localhost:9009 jest:integration"
+    "postbuild:release": "node scripts/postbuild.js"
   },
   "keywords": [],
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
     "@popperjs/core": "^2.2.2",
+    "@types/lodash.isequal": "^4.5.6",
+    "@types/uuid": "^7.0.3",
     "fast-memoize": "^2.5.2",
     "lodash.isequal": "^4.5.0",
-    "react-popper": "^2.2.4",
+    "react-popper": "^2.2.1",
     "throttle-debounce": "^2.3.0",
     "uuid": "^8.0.0"
   },
   "devDependencies": {
-    "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/loader": "^2.1.3",
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-node-resolve": "^8.0.1",
-    "@storybook/addon-a11y": "6.5.8",
-    "@storybook/addon-docs": "6.5.8",
-    "@storybook/addon-knobs": "^6.4.0",
-    "@storybook/addon-storysource": "6.5.8",
-    "@storybook/addon-viewport": "6.5.8",
-    "@storybook/addons": "6.5.8",
-    "@storybook/builder-webpack5": "6.5.8",
-    "@storybook/manager-webpack5": "6.5.8",
-    "@storybook/react": "6.5.8",
-    "@storybook/storybook-deployer": "^2.8.11",
-    "@storybook/theming": "6.5.8",
-    "@testing-library/dom": "^8.13.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/react-hooks": "^7.0.2",
-    "@testing-library/user-event": "^12.8.0",
-    "@types/classnames": "^2.3.1",
-    "@types/jest": "^25.2.1",
-    "@types/lodash.isequal": "^4.5.5",
-    "@types/puppeteer": "^5.4.3",
-    "@types/react": "^17.0.1",
-    "@types/react-dom": "^17.0.1",
-    "@types/react-test-renderer": "^17.0.1",
+    "@testing-library/react": "^10.0.2",
+    "@testing-library/user-event": "^10.0.2",
+    "@types/classnames": "^2.2.10",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-test-renderer": "^16.0.1",
     "@types/resize-observer-browser": "^0.1.3",
     "@types/styled-components": "^5.1.0",
     "@types/styled-system": "^5.1.9",
     "@types/testing-library__react": "^10.0.1",
     "@types/throttle-debounce": "^2.1.0",
-    "@types/uuid": "^7.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
     "add": "^2.0.6",
-    "amazon-chime-sdk-js": "^3.6.0",
+    "amazon-chime-sdk-js": "^3.7.0",
     "babel-loader": "^8.1.0",
-    "css-loader": "^6.7.1",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "git-rev-sync": "^3.0.2",
-    "jest": "^26.6.3",
-    "jest-image-snapshot": "^4.4.0",
-    "jest-puppeteer-docker": "^1.4.2",
+    "css-loader": "^2.1.1",
+    "mini-css-extract-plugin": "^0.7.0",
+    "playwright": "^1.1.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
-    "prettier": "^2.4.1",
     "prompt-sync": "^4.2.0",
-    "puppeteer": "^2.1.1",
-    "react": "^17.0.1",
+    "react": "^18.2.0",
     "react-docgen-typescript-loader": "^3.7.2",
-    "react-dom": "^17.0.1",
-    "react-is": "^17.0.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^16.13.1",
     "resize-observer-polyfill": "^1.5.1",
     "rimraf": "^2.6.3",
     "rollup": "^2.26.3",
     "rollup-plugin-peer-deps-external": "^2.2.2",
     "rollup-plugin-typescript2": "^0.27.1",
-    "start-server-and-test": "^1.14.0",
-    "storybook": "^6.5.8",
+    "start-server-and-test": "^1.11.3",
     "style-loader": "^0.23.1",
     "styled-components": "^5.1.0",
     "styled-system": "^5.1.5",
-    "themeprovider-storybook": "^1.8.0",
-    "ts-jest": "^26.5.2",
     "ts-loader": "^6.0.2",
-    "typescript": "^4.2.1",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
+    "typescript": "^3.5.1",
+    "url-loader": "^2.0.0",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.2"
   },
   "peerDependencies": {
-    "amazon-chime-sdk-js": "^3.6.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "amazon-chime-sdk-js": "^3.x",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "styled-components": "^5.0.0",
     "styled-system": "^5.1.5"
   },
