--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "amazon-chime-sdk-component-library-react",
-  "version": "1.6.0",
+  "name": "aws-chime-react-ui",
+  "version": "0.1.0",
   "description": "Amazon Chime SDK Component Library - React",
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
@@ -9,7 +9,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/aws/amazon-chime-sdk-component-library"
+    "url": "git://github.com/mandipfusenepal/amazon-chime-sdk-component-library"
   },
   "types": "lib/index.d.ts",
   "scripts": {
